# mypy-einsum

./: .gitignore  LICENSE  README.md  dev-requirements.txt  mypy_einsum.py  pyproject.toml
.github/workflows/: release.yml  test.yml
tests/: test_typing.py
tests/data/: mypy.ini
tests/data/fail/: einsum_tests.pyi  template_einsum_tests.pyi
tests/data/pass/: einsum_tests.pyi  template_einsum_tests.pyi
