[project]
name = "mypy-einsum"
version = "1.0.0"
authors = [{ name = "Lukas Geiger", email = "lukas.geiger94@gmail.com" }]
description = "Mypy plugin for NumPy/Jax/PyTorch einsum operations"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/lgeiger/mypy-einsum"
Issues = "https://github.com/lgeiger/mypy-einsum/issues"

[tool.ruff]
include = ["*.py", "**/pyproject.toml"]
